[package]
name = "tokio_slow_demo"
version = "0.1.0"
authors = ["Sven Van Asbroeck <TheSven73@gmail.com>"]
edition = "2018"

[dependencies]
md5 = "0.7.0"
tokio = { version = "0.3.4", features = ["full"] }
async-std = "1.7.0"
async-channel = "1.5.1"
smol = "1.2.4"

[dev-dependencies]
criterion = "0.3.3"
tempfile = "3.1.0"
rand = "0.7.3"

[[bench]]
name = "demo"
harness = false
